@@ -6,6 +6,8 @@ examples/ex4.pl
 examples/ex5.pl
 examples/ex6.pl
 inc/Module/Install.pm
+inc/Module/Install/AuthorRequires.pm
+inc/Module/Install/AuthorTests.pm
 inc/Module/Install/Base.pm
 inc/Module/Install/Can.pm
 inc/Module/Install/Fetch.pm
@@ -22,13 +24,13 @@ MANIFEST			This list of files
 META.yml
 README
 SIGNATURE
-t/Error-Pure-HTTP-JSON-Advance/00-use.t
-t/Error-Pure-HTTP-JSON-Advance/01-version.t
-t/Error-Pure-HTTP-JSON-Advance/02-pod_coverage.t
-t/Error-Pure-HTTP-JSON-Advance/03-pod.t
-t/Error-Pure-HTTP-JSON-Advance/04-err.t
-t/Error-Pure-HTTP-JSON/00-use.t
-t/Error-Pure-HTTP-JSON/01-version.t
-t/Error-Pure-HTTP-JSON/02-pod_coverage.t
-t/Error-Pure-HTTP-JSON/03-pod.t
-t/Error-Pure-HTTP-JSON/04-err.t
+t/Error-Pure-HTTP-JSON-Advance/01-use.t
+t/Error-Pure-HTTP-JSON-Advance/02-version.t
+t/Error-Pure-HTTP-JSON-Advance/03-err.t
+t/Error-Pure-HTTP-JSON/01-use.t
+t/Error-Pure-HTTP-JSON/02-version.t
+t/Error-Pure-HTTP-JSON/03-err.t
+xt/Error-Pure-HTTP-JSON-Advance/01-pod_coverage.t
+xt/Error-Pure-HTTP-JSON-Advance/02-pod.t
+xt/Error-Pure-HTTP-JSON/01-pod_coverage.t
+xt/Error-Pure-HTTP-JSON/02-pod.t
