@@ -1,5 +1,6 @@
 0.05
  [Common]
+ - Move author tests to xt/ directory.
  - Update Module::Install to 1.16 version.
  - Update copyright years.
 
